--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,37 @@
--e .[dev,examples]
+certifi==2019.6.16
+urwid==2.0.1
+requests==2.22.0
+blinker==1.4
+pyasn1==0.4.7
+pyparsing==2.4.2
+Brotli==1.0.7
+setuptools==41.2.0
+cryptography==2.7
+psutil==5.6.3
+asynctest==0.13.0
+beautifulsoup4==4.8.0
+click==7.0
+Flask==1.1.1
+h2==3.1.1
+hpack==3.0.0
+hyperframe==5.2.0
+ldap3==2.6.1
+parver==0.2.1
+passlib==1.7.1
+protobuf==3.9.1
+pydevd==1.7.1
+pydivert==2.1.0
+PyInstaller==3.5
+pympler==0.7
+pyOpenSSL==19.0.0
+pyperclip==1.7.0
+pytest==5.1.2
+ruamel.base==1.0.0
+sortedcontainers==2.1.0
+typing==3.7.4.1
+wsproto==0.15.0
+tornado==5.1.1
+kaitaistruct==0.8
+ruamel.yaml==0.16.5
+zstandard==0.11.1
+
