--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, lint
+envlist = py35, py36, py37, lint, individual_coverage, wheeltest, docs
 skipsdist = True
 toxworkdir={env:TOX_WORK_DIR:.tox}
 
