--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,9 @@ exclude_lines =
 [mypy-mitmproxy.contrib.*]
 ignore_errors = True
 
+[mypy-tornado.*]
+ignore_errors = True
+
 [tool:full_coverage]
 exclude =
     mitmproxy/proxy/protocol/base.py
