cleanup mypy usage

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,10 +19,16 @@ exclude_lines =
     pragma: no cover
     raise NotImplementedError()
 
+[mypy]
+ignore_missing_imports = True
+
 [mypy-mitmproxy.contrib.*]
 ignore_errors = True
 
 [mypy-tornado.*]
+ignore_errors = True
+
+[mypy-test.*]
 ignore_errors = True
 
 [tool:full_coverage]
