--- a/tox.ini
+++ b/tox.ini
@@ -31,8 +31,7 @@ commands =
   flake8 --jobs 8 mitmproxy pathod examples test release
   python ./test/filename_matching.py
   rstcheck README.rst
-  mypy --ignore-missing-imports ./mitmproxy ./pathod
-  mypy --ignore-missing-imports --follow-imports=skip  ./examples/simple/ ./examples/pathod/ ./examples/complex/
+  mypy .
 
 [testenv:individual_coverage]
 deps =
