--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,3 +8,33 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: TrueBrain/actions-flake8@v1.2
+  mypy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-python@v1
+    - name: Run mypy
+      run: |
+        python -m pip install --upgrade pip
+        pip install mypy
+        mypy .
+  test:
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v1
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - run: mitmdump --version
+    - name: Test with pytest
+      run: |
+        pytest --timeout 60 --cov-report=xml \
+          --cov=mitmproxy --cov=pathod \
+          --full-cov=mitmproxy/ --full-cov=pathod/
+    - uses: codecov/codecov-action@v1.0.3
+      with:
+        token: ${{secrets.CODECOV_TOKEN}} #required
