--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
   mypy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
+    - uses: actions/checkout@v1
     - name: Run mypy
       run: |
         python -m pip install --upgrade pip
@@ -24,6 +24,7 @@ jobs:
         os: [macos-latest, windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
+    - uses: actions/setup-python@v1
     - uses: actions/checkout@v1
     - name: Install dependencies
       run: |
