--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - uses: TrueBrain/actions-flake8@v1.2
+    - if: github.event_name == 'pull_request'
+      uses: TrueBrain/actions-flake8@v1.2
+    - if: github.event_name != 'pull_request'
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8
+        flake8
   mypy:
     runs-on: ubuntu-latest
     steps:
