--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - if: github.event_name == 'pull_request'
-      uses: TrueBrain/actions-flake8@v1.2
-    - if: github.event_name != 'pull_request'
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8
-        flake8
+    - uses: TrueBrain/actions-flake8@v1.2
   mypy:
     runs-on: ubuntu-latest
     steps:
@@ -36,6 +30,7 @@ jobs:
     - if: matrix.os == 'windows-latest'
       uses: actions/setup-python@v1
       with:
+        python-version: '3.7'
         architecture: 'x86'  # fixme: cryptography update
     - uses: actions/checkout@v1
     - name: Install dependencies
