--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
         os: [macos-latest, windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
-    - if: !startsWith(runner.os, 'Windows')
+    - if: "!startsWith(runner.os, 'Windows')"
       uses: actions/setup-python@v1
     - if: startsWith(runner.os, 'Windows')
       uses: actions/setup-python@v1
