--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,3 +69,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: printenv
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
