--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,18 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: TrueBrain/actions-flake8@v1.2
+      - uses: actions/checkout@v1
+      - uses: TrueBrain/actions-flake8@v1.2
   mypy:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-python@v1
-    - uses: actions/checkout@v1
-    - name: Run mypy
-      run: |
-        python -m pip install --upgrade pip
-        pip install mypy
-        mypy .
+      - uses: actions/setup-python@v1
+      - uses: actions/checkout@v1
+      - name: Run mypy
+        run: |
+          python -m pip install --upgrade pip
+          pip install mypy
+          mypy .
   test:
     strategy:
       fail-fast: false  # FIXME
@@ -25,23 +25,23 @@ jobs:
         os: [macos-latest, windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
-    - if: matrix.os != 'windows-latest'
-      uses: actions/setup-python@v1
-    - if: matrix.os == 'windows-latest'
-      uses: actions/setup-python@v1
-      with:
-        python-version: '3.7'
-        architecture: 'x86'  # FIXME: cryptography update
-    - uses: actions/checkout@v1
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - run: mitmdump --version
-    - name: Test with pytest
-      run: |
-        pytest --timeout 60 --cov-report=xml --cov=mitmproxy --cov=pathod --full-cov=mitmproxy/ --full-cov=pathod/
-    - run: codecov
+      - if: matrix.os != 'windows-latest'
+        uses: actions/setup-python@v1
+      - if: matrix.os == 'windows-latest'
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.7'
+          architecture: 'x86'  # FIXME: cryptography update
+      - uses: actions/checkout@v1
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - run: mitmdump --version
+      - name: Test with pytest
+        run: |
+          pytest --timeout 60 --cov-report=xml --cov=mitmproxy --cov=pathod --full-cov=mitmproxy/ --full-cov=pathod/
+      - run: codecov
   build:
     strategy:
       fail-fast: false  # FIXME
@@ -49,27 +49,39 @@ jobs:
         os: [macos-latest, windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
-    - if: "!startsWith(runner.os, 'Windows')"
-      uses: actions/setup-python@v1
-    - if: startsWith(runner.os, 'Windows')
-      uses: actions/setup-python@v1
-      with:
-        python-version: '3.7'
-        architecture: 'x86'  # FIXME: cryptography update
-    - uses: actions/checkout@v1
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - run: |
-        tox -e cibuild -- build
-    - uses: actions/upload-artifact@master
-      with:
-        name: binaries
-        path: release/dist
+      - if: "!startsWith(runner.os, 'Windows')"
+        uses: actions/setup-python@v1
+      - if: startsWith(runner.os, 'Windows')
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.7'
+          architecture: 'x86'  # FIXME: cryptography update
+      - uses: actions/checkout@v1
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - run: |
+          tox -e cibuild -- build
+      - uses: actions/upload-artifact@master
+        with:
+          name: binaries
+          path: release/dist
 
   deploy:
     runs-on: ubuntu-latest
     if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
     needs: build
-        tox -e cibuild -- upload
+    steps:
+      - uses: actions/setup-python@v1
+      - uses: actions/checkout@v1
+      - uses: actions/download-artifact@master
+        with:
+          name: binaries
+          path: release/dist
+      - run: ls
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - run: tox -e cibuild -- upload
