--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,21 +3,32 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  lint:
+  lint-pr:
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
       - uses: TrueBrain/actions-flake8@v1.2
+  lint-local:
+    # do not use external action when secrets are exposed.
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/setup-python@v1
+      - uses: actions/checkout@v1
+      - run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+      - run: flake8 mitmproxy pathod examples test release
   mypy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-python@v1
       - uses: actions/checkout@v1
-      - name: Run mypy
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install mypy
-          mypy .
+      - run: mypy .
   test:
     strategy:
       fail-fast: false  # FIXME
