--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,9 @@ jobs:
         run: |
           pytest --timeout 60 --cov-report=xml --cov=mitmproxy --cov=pathod --full-cov=mitmproxy/ --full-cov=pathod/
       - run: codecov
+        env:
+          VCS_PULL_REQUEST: ${{ github.event.number }}
+          VCS_SLUG: ${{ github.repository }}
   build:
     strategy:
       fail-fast: false  # FIXME
