--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,8 @@ jobs:
       CI_BUILD_DOCKER: 1
     steps:
       - run: printenv
+      # zstandard currently doesn't have 3.8 wheels,
+      # also we'd need to upgrade cryptography from version 2.4.
       - uses: actions/setup-python@v1
         with:
           python-version: '3.7'
@@ -86,20 +88,24 @@ jobs:
       CI_BUILD_PYINSTALLER: 1
       CI_BUILD_WININSTALLER: "${{ (matrix.os == 'windows-latest') || '' }}"
     steps:
+      - run: printenv
       # zstandard currently doesn't have 3.8 wheels,
       # also we'd need to upgrade cryptography from version 2.4.
       - uses: actions/setup-python@v1
         with:
           python-version: '3.7'
       - uses: actions/checkout@v1
+      - if: matrix.os == 'windows-latest'
+        uses: actions/cache@v1
+        with:
+          path: release/installbuilder/setup
+          key: installbuilder
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       # TODO: Cache InstallBuilder
-      - run: |
-          printenv
-          tox -e cibuild -- build
+      - run: tox -e cibuild -- build
       - uses: actions/upload-artifact@master
         with:
           name: binaries
