--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,10 @@ name: CI
 
 on: [push, pull_request]
 
+# We currently use Python 3.7 for most things:
+# - zstandard currently doesn't have 3.8 wheels,
+# - we need to upgrade cryptography from version 2.4, which also doesn't have wheels
+
 env:
   CI_BUILD_KEY: ${{ secrets.CI_BUILD_KEY }}
 
@@ -17,20 +21,16 @@ jobs:
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-python@v1
       - uses: actions/checkout@v1
-      - run: |
-          python -m pip install --upgrade pip
-          pip install flake8
+      - uses: actions/setup-python@v1
+      - run: pip install flake8
       - run: flake8 mitmproxy pathod examples test release
   mypy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-python@v1
       - uses: actions/checkout@v1
-      - run: |
-          python -m pip install --upgrade pip
-          pip install mypy
+      - uses: actions/setup-python@v1
+      - run: pip install mypy
       - run: mypy .
   test:
     strategy:
@@ -39,23 +39,16 @@ jobs:
         os: [macos-latest, windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
-      # zstandard currently doesn't have 3.8 wheels,
-      # also we'd need to upgrade cryptography from version 2.4.
+      - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
         with:
           python-version: '3.7'
-      - uses: actions/checkout@v1
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - run: pip install -r requirements.txt codecov
       - run: mitmdump --version
       - name: Test with pytest
         run: |
           pytest --timeout 60 --cov-report=xml --cov=mitmproxy --cov=pathod --full-cov=mitmproxy/ --full-cov=pathod/
-      - run: |
-          pip install codecov
-          codecov
+      - run: codecov
         env:
           VCS_PULL_REQUEST: ${{ github.event.number }}
           VCS_SLUG: ${{ github.repository }}
@@ -65,17 +58,12 @@ jobs:
       CI_BUILD_WHEEL: 1
       CI_BUILD_DOCKER: 1
     steps:
-      - run: printenv
-      # zstandard currently doesn't have 3.8 wheels,
-      # also we'd need to upgrade cryptography from version 2.4.
+      - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
         with:
           python-version: '3.7'
-      - uses: actions/checkout@v1
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tox
+      - run: printenv
+      - run: pip install tox
       - run: tox -e cibuild -- build
   build-binaries:
     strategy:
@@ -88,23 +76,17 @@ jobs:
       CI_BUILD_PYINSTALLER: 1
       CI_BUILD_WININSTALLER: "${{ (matrix.os == 'windows-latest') || '' }}"
     steps:
-      - run: printenv
-      # zstandard currently doesn't have 3.8 wheels,
-      # also we'd need to upgrade cryptography from version 2.4.
+      - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
         with:
           python-version: '3.7'
-      - uses: actions/checkout@v1
       - if: matrix.os == 'windows-latest'
         uses: actions/cache@v1
         with:
           path: release/installbuilder/setup
           key: installbuilder
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      # TODO: Cache InstallBuilder
+      - run: printenv
+      - run: pip install tox
       - run: tox -e cibuild -- build
       - uses: actions/upload-artifact@master
         with:
@@ -116,15 +98,25 @@ jobs:
     if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
     needs: [build-wheel-and-docker, build-binaries]
     steps:
-      - uses: actions/setup-python@v1
       - uses: actions/checkout@v1
+      - uses: actions/setup-python@v1
       - uses: actions/download-artifact@master
         with:
           name: binaries
           path: release/dist
       - run: ls release/dist
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tox
+      - run: pip install tox
       - run: tox -e cibuild -- upload
+
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v1
+        with:
+          python-version: '3.7'
+      - run: pip install tox
+      - run: |
+          wget https://github.com/gohugoio/hugo/releases/download/v0.59.1/hugo_0.59.1_Linux-64bit.deb
+          sudo dpkg -i hugo*.deb
+      - run: tox -e docs
