--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,13 +50,13 @@ jobs:
           pytest --timeout 60 --cov-report=xml --cov=mitmproxy --cov=pathod --full-cov=mitmproxy/ --full-cov=pathod/
       - run: codecov
         env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
           VCS_PULL_REQUEST: ${{ github.event.number }}
           VCS_SLUG: ${{ github.repository }}
-  build-wheel-and-docker:
+  build-wheel:
     runs-on: ubuntu-latest
     env:
       CI_BUILD_WHEEL: 1
-      CI_BUILD_DOCKER: 1
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
@@ -65,6 +65,10 @@ jobs:
       - run: printenv
       - run: pip install tox
       - run: tox -e cibuild -- build
+      - uses: actions/upload-artifact@master
+        with:
+          name: wheel
+          path: release/dist
   build-binaries:
     strategy:
       fail-fast: false  # FIXME
@@ -94,12 +98,16 @@ jobs:
           path: release/dist
 
   deploy:
-    runs-on: ubuntu-latest
     if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
-    needs: [build-wheel-and-docker, build-binaries]
+    runs-on: ubuntu-latest
+    needs: [build-wheel, build-binaries]
+    env:
+      CI_BUILD_WHEEL: 1
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-python@v1
+        with:
+          python-version: '3.7'
       - uses: actions/download-artifact@master
         with:
           name: binaries
@@ -107,6 +115,25 @@ jobs:
       - run: ls release/dist
       - run: pip install tox
       - run: tox -e cibuild -- upload
+
+  # Separate from everything else because slow.
+  build-and-deploy-docker:
+    if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
+    runs-on: ubuntu-latest
+    env:
+      CI_BUILD_DOCKER: 1
+      steps:
+        - uses: actions/checkout@v1
+        - uses: actions/setup-python@v1
+          with:
+            python-version: '3.7'
+        - run: pip install tox
+        - uses: actions/download-artifact@master
+          with:
+            name: wheel
+            path: release/dist
+        - run: tox -e cibuild -- build
+        - run: tox -e cibuild -- upload
 
   docs:
     runs-on: ubuntu-latest
