--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -183,4 +183,4 @@ jobs:
       - working-directory: ./web
         run: npm test
       - working-directory: ./web
-        run: yarn run codecov
+        run: $(yarn global bin)/codecov
