--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -99,7 +99,7 @@ jobs:
           path: release/dist
 
   deploy:
-    if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
+    # FIXME if: github.repository == 'mitmproxy/mitmproxy' && github.event_name == 'push'
     runs-on: ubuntu-latest
     needs: [build-wheel, build-binaries]
     env:
